# STG-I

./: .gitignore  Dockerfile  README.md  set_env_vars
.github/workflows/: test_stgi.yml
examples/abs_test/: abs.cpp
examples/add_test/: IPUT.ll  PUT.ll
examples/array_test/: IPUT.ll  PUT.ll  array_sym_index.cpp
examples/array_with_sym_index/: IPUT.ll  PUT.ll  symArrayIndexWithAssert.cpp
examples/classify_gtest/: Makefile  classify_test.cpp  run.sh
examples/classify_test/: IPUT.ll  PUT.ll
examples/complex_if_test/: complex_if.cpp
examples/fmod_test/: IPUT.ll  fmod.c  fmod.cpp
examples/frem_test/: frem.cpp
examples/if_else_ladder_test/: IPUT.ll  if_else_ladder.cpp
examples/if_nested_if_else_test/: PUT.ll
examples/if_test/: IPUT.ll  if_else_if_else_min.cpp
examples/llvm.exp_test/: put_ubuntu.ll
examples/llvm.fabs_test/: fabs.cpp
examples/llvm.log_test/: llvm.log_test.cpp
examples/llvm.sin+cos+sqrt_test/: llvm.sin+cos_test.cpp
examples/odd_even_srem_test/: OddEven.cpp  OddEven.hpp
examples/px4_artifactSuite/: readme.md  run.sh
examples/urem/: urem.cpp
lib/: Makefile  stg.cpp  stg.h  stg.hpp
pass/: README.md
pass/STGInstrumenter/fromllvminstall/: CMakeLists.txt
scripts/: buildtest.sh  distclean.sh  install-llvm-clang.sh  install_gtest.sh  install_stgi.sh  register-clang-version.sh  run_tests.sh  runtest.sh
test/: IPUT.bc  IPUT.ll  PUT.bc  PUT.ll  README.md  a.out  buildtest.sh  classify.cpp  commandLine.sh  linked.bc  stg.bc  test_result.txt
test_programs/: README.md
util/: install_clang.sh  install_stgi.sh  uninstall_stgi.sh
(+1649 files in other folders)
